# arba-stdx

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/script/: quick_install.cmake
example/: example.cpp
include/arba/stdx/: stdx.hpp
include/arba/stdx/algorithm/: quick_erase.hpp  unstable_erase.hpp
include/arba/stdx/algorithm/policy/: range_policy.hpp
include/arba/stdx/chrono/: duration.hpp  format_time_point.hpp  stopwatch.hpp
include/arba/stdx/container/: span.hpp
include/arba/stdx/design_pattern/: singleton.hpp
include/arba/stdx/io/: check_file.hpp  copy.hpp  open_file.hpp
src/arba/stdx/: stdx.cpp
src/arba/stdx/chrono/: format_time_point.cpp  stopwatch.cpp
src/arba/stdx/container/: span.cpp
src/arba/stdx/io/: check_file.cpp  copy.cpp  open_file.cpp
test/: CMakeLists.txt  project_version_tests.cpp
test/algorithm/: quick_erase_tests.cpp  unstable_erase_tests.cpp
test/chrono/: format_time_point_tests.cpp  stopwatch_tests.cpp
test/container/: span_tests.cpp
test/design_pattern/: singleton_tests.cpp
test/io/: check_file_tests.cpp  copy_tests.cpp  create_resource.hpp  open_file_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
